--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>Portfolio Template - Open source</title>
+    <title>Erik Liu</title>
     <meta name="title" content="Portfolio Template - Open source" />
     <meta
       name="description"
@@ -47,35 +47,35 @@
     <!-- Link -->
     <link
       rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
+      sizes="120x120"
+      href="assets/favicon_lys/apple-touch-icon-120.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon/favicon-16x16.png"
+      href="/assets/favicon_lys/favicon-16x16.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
+      href="assets/favicon_lys/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="assets/favicon/android-chrome-192x192.png"
+      href="assets/favicon_lys/android-chrome-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="assets/favicon/android-chrome-512x512.png"
+      href="assets/favicon_lys/android-chrome-512x512.png"
     />
-    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
-    <link rel="manifest" href="assets/favicon/site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon_lys/favicon.ico" />
+    <link rel="manifest" href="assets/favicon_lys/site.webmanifest" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -92,19 +92,20 @@
         <div class="container">
           <!-- Logo -->
           <h1 id="logo">
-            <a href="https://github.com/CommunityPro/portfolio-html"
-              ><img src="./assets/logo.png" alt="Your Logo"
+            <a href="#hero"
+              ><img src="./assets/logo_wrapped.png" alt="Your Logo"
             /></a>
           </h1>
           <!-- Navbar links -->
           <ul class="nav-menu">
+            <li><a class="nav-link" href="#">EXPERIENCES</a></li>
             <li><a class="nav-link" href="#projects">PROJECTS</a></li>
             <li><a class="nav-link" href="#">CONTACT</a></li>
             <li><a class="nav-link" href="#">BlOG</a></li>
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href="https://github.com/CommunityPro/portfolio-html"
+                href=""
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
             </li>
@@ -130,28 +131,34 @@
       <section class="header-container">
         <img
           class="profile-image"
-          src="assets/profile-image.svg"
+          src="https://avatars.githubusercontent.com/u/90878510?s=400&u=4a2291fa00a8e2bd78d2b09d053524826c6d00ee&v=4"
           alt=""
         />
-        <h1>Hi I'm Franklin</h1>
+        <h1>Hi I'm Erik, or 云嵩.</h1>
 
         <div class="content-text">
-          <h2>Building digital</h2>
-          <h2>products, brands, and experience.</h2>
+          <h2>Exploring software engineering and ML</h2>
+          <h2>through work and research experiences</h2>
 
           <p>
-            A Frontend Developer and Visual Designer with experience in web
-            design, brand identity and product design.
+            A fourth-year CS student at Georgia Tech with experience in engineering scalable systems and tackling real-world problems with ML.
           </p>
         </div>
         <a
-          href="https://github.com/CommunityPro/portfolio-html"
+          href="https://www.linkedin.com/in/yunsong-liu/"
           class="btn btn-secondary"
           target="_blank"
           >Connect With Me</a
         >
       </section>
     </header>
+
+    <section id="experiences" class="container" style="display: none">
+      <div class="division"></div>
+      <div class="content-text">
+        <h2>Experiences</h2>
+      </div>
+    </section>
 
     <!-- Projects -->
     <section id="projects" class="project-container container">
@@ -178,7 +185,7 @@
         </div>
 
         <!-- Project 2 -->
-        <div href="" class="card">
+        <!-- <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
               <h3>Project Two</h3>
@@ -190,10 +197,10 @@
               <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Porject 3 -->
-        <div href="" class="card">
+        <!-- <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
               <h3>Project Three</h3>
@@ -206,90 +213,23 @@
             </div>
           </div>
         </div>
+      </article> -->
 
-        <!-- Project 4 -->
-        <div href="" class="card">
-          <div class="project-info">
-            <div class="project-bio">
-              <h3>Project Four</h3>
-              <p>React, Redux, SASS</p>
-            </div>
-
-            <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project 5 -->
-        <div href="" class="card">
-          <div class="project-info">
-            <div class="project-bio">
-              <h3>Project Five</h3>
-              <p>React, Redux, SASS</p>
-            </div>
-
-            <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project 6 -->
-        <div href="" class="card">
-          <div class="project-info">
-            <div class="project-bio">
-              <h3>Project Six</h3>
-              <p>React, Redux, SASS</p>
-            </div>
-
-            <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
-      </article>
-
-      <a href="#" class="btn btn-secondary"
+      <!-- <a href="#" class="btn btn-secondary"
         target="_blank" >See More <i class="fas fa-arrow-right"></i
-      ></a>
+      ></a> -->
     </section>
 
     <footer id="footer">
       <div class="container">
-        <a href="mailto:communitypro47@gmail.com">communitypro47@gmail.com</a>
+        <a href="mailto:communitypro47@gmail.com">liuys0118@gmail.com</a>
         <!-- Social links -->
         <div class="social">
-          <a href="#" target="_blank"
-            ><img src="./assets/facebook-icon.svg" alt="Facebook"
-          /></a>
-          <a href="#" target="_blank"><img src="./assets/twitter-icon.svg" alt="Twitter" /></a>
           <a href="#" target="_blank"
             ><img src="./assets/linkedin-icon.svg" alt="Linkedin"
           /></a>
           <a href="#" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
-          <a href="#" target="_blank"
-            ><img src="./assets/hashnode-icon.svg" alt="Hashnode"
-          /></a>
         </div>
-        <!-- Attribution -->
-        <div class="attribution">
-          <a
-            href="https://github.com/CommunityPro/portfolio-html"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="https://user-images.githubusercontent.com/62628408/157202263-9174da24-b19a-4017-9b7c-a1d26ae8f014.svg"
-              alt="attribution"
-              width="150px"
-            />
-          </a>
-        </div>
-        <p>Copyright &copy; Communitypro <span id="datee"></span>, All rights reserved</p>
       </div>
     </footer>
     <script src="js/script.js"></script>
