--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
     <title>Erik Liu</title>
-    <meta name="title" content="Portfolio Template - Open source" />
+    <meta name="title" content="Erik Liu | Yunsong Liu" />
     <meta
       name="description"
-      content="Build or customize your portfolio website using this super easy template. Free to use if you are a member of the community or a contributor to this project"
+      content="Erik Liu, or Yunsong, is an aspiring software engineer and CS student at Georgia Tech. He is from Beijing, China."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://github.com/CommunityPro/portfolio-html"
+      content="https://erikliu18.github.io"
     />
-    <meta property="og:title" content="Portfolio Template - Open source" />
+    <meta property="og:title" content="Erik Liu | Yunsong Liu" />
     <meta
       property="og:description"
-      content="Build or customize your portfolio website using this super easy template. Free to use if you are a member of the community or a contributor to this project"
+      content="Erik Liu, or Yunsong, is an aspiring software engineer and CS student at Georgia Tech. He is from Beijing, China"
     />
     <meta
       property="og:image"
@@ -32,12 +32,12 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://github.com/CommunityPro/portfolio-html"
+      content="https://erikliu18.github.io"
     />
-    <meta property="twitter:title" content="Portfolio Template - Open source" />
+    <meta property="twitter:title" content="Erik Liu | Yunsong Liu" />
     <meta
       property="twitter:description"
-      content="Build or customize your portfolio website using this super easy template. Free to use if you are a member of the community or a contributor to this project"
+      content="Erik Liu, or Yunsong, is an aspiring software engineer and CS student at Georgia Tech. He is from Beijing, China"
     />
     <meta
       property="twitter:image"
