--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="https://user-images.githubusercontent.com/62628408/150613011-b78a7f5a-0af1-4312-aab0-0022e7258693.png"
+      content="https://raw.githubusercontent.com/erikLiu18/erikLiu18.github.io/main/homepage.png"
     />
 
     <!-- Twitter -->
@@ -41,7 +41,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://user-images.githubusercontent.com/62628408/150613011-b78a7f5a-0af1-4312-aab0-0022e7258693.png"
+      content="https://raw.githubusercontent.com/erikLiu18/erikLiu18.github.io/main/homepage.png"
     />
 
     <!-- Link -->
