--- a/index.html
+++ b/index.html
@@ -48,34 +48,34 @@
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="assets/favicon_lys/apple-touch-icon-120.png"
+      href="assets/favicon-lys/apple-touch-icon-120.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon_lys/favicon-16x16.png"
+      href="/assets/favicon-lys/favicon-16x16.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon_lys/favicon-32x32.png"
+      href="assets/favicon-lys/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="assets/favicon_lys/android-chrome-192x192.png"
+      href="assets/favicon-lys/android-chrome-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="assets/favicon_lys/android-chrome-512x512.png"
+      href="assets/favicon-lys/android-chrome-512x512.png"
     />
-    <link rel="icon" type="image/x-icon" href="assets/favicon_lys/favicon.ico" />
-    <link rel="manifest" href="assets/favicon_lys/site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon-lys/favicon.ico" />
+    <link rel="manifest" href="assets/favicon-lys/site.webmanifest" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -165,7 +165,7 @@
       <div class="division"></div>
       <div class="content-text">
         <h2>Projects</h2>
-        <p>Check out some of my personal and paid projects</p>
+        <p>Check out some of my projects</p>
       </div>
 
       <article class="project">
@@ -173,31 +173,31 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project One</h3>
-              <p>React, Redux, SASS</p>
+              <h3>NFT Market Abnormality DataVis</h3>
+              <p>D3.js, HTML, CSS</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/erikLiu18/nft" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://erikliu18.github.io/nft" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
 
         <!-- Project 2 -->
-        <!-- <div href="" class="card">
+        <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Two</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Mock Shake Shack Menu</h3>
+              <p>React, HTML, CSS</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/erikLiu18/popmenu-interview-project" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://erikliu18.github.io/popmenu-interview-project/" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
-        </div> -->
+        </div>
 
         <!-- Porject 3 -->
         <!-- <div href="" class="card">
@@ -222,7 +222,7 @@
 
     <footer id="footer">
       <div class="container">
-        <a href="mailto:communitypro47@gmail.com">liuys0118@gmail.com</a>
+        <a href="mailto:liuys0118@gmail.com">liuys0118@gmail.com</a>
         <!-- Social links -->
         <div class="social">
           <a href="#" target="_blank"
