Update footer links

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
         <a href="mailto:liuys0118@gmail.com">liuys0118@gmail.com</a>
         <!-- Social links -->
         <div class="social">
-          <a href="#" target="_blank"
+          <a href="https://www.linkedin.com/in/yunsong-liu/" target="_blank"
             ><img src="./assets/linkedin-icon.svg" alt="Linkedin"
           /></a>
-          <a href="#" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
+          <a href="https://github.com/erikLiu18" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
         </div>
       </div>
     </footer>
