--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href=""
+                href="./assets/resume_liuyunsong.pdf"
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
             </li>
